--- a/SRC/CSS/style.css
+++ b/SRC/CSS/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #cacaca;
+    background-color: #292826;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -10,12 +10,12 @@
 }
 
 .introduction {
-    background-color: #000;
+    background-color: #393836;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 700px;
+    width: 80%;
 }
 
 .introduction .banner {
@@ -139,6 +139,180 @@
     width: 480px;
 }
 
+.loading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 600px;
+    background-color: #292826;
+    color: #fff;
+}
+
+.loading-image {
+    width: 500px;
+    margin-bottom: 20px;
+}
+
+.loading-text {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.result {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 600px;
+    background: url(../Images/Background-quiz.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #333;
+    text-align: center;
+}
+
+.result .logo-panetone {
+    width: 300px;
+    margin-top: 50px;
+    margin-left: 0;
+    padding: 10px;
+    border-bottom: 0;
+}
+
+.result-text {
+    font-size: 22px;
+    margin: 70px 30px 100px 30px;
+    padding: 30px;
+    border: #000 solid 3px;
+    background-color: #6f1919;
+    color: #fff;
+    font-weight: 600;
+}
+
+.result:after {
+    content: url(../images/seta_preta.png);
+    position: absolute;
+    bottom: 4rem;
+    height: 40px;
+    width: 80px;
+    animation: downarrow 0.6s infinite alternate ease-in-out;
+}
+
+@-webkit-keyframes downarrow {
+    0% {
+        -webkit-transform: translateY(0);
+        opacity: 0.4;
+    }
+
+    100% {
+        -webkit-transform: translateY(5em);
+        opacity: 0.9;
+    }
+}
+
+.result .banner {
+    width: 450px;
+    border: #fff solid 4px;
+    margin-top: 10px;
+    margin-bottom: 70px;
+}
+
+.foot-section {
+    background-color: #fff;
+    width: 600px;
+    border-top: #000 double;
+}
+
+.foot-section .foot-result {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #acacac;
+}
+
+.checkout-button {
+    background-color: #e42e2e;
+    color: #fff;
+    padding: 20px 30px;
+    margin: 35px;
+    width: 280px;
+    height: 60px;
+    box-shadow: 10px 12px 12px #000;
+    border: none;
+    border-radius: 28px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    animation: pulse 1.5s infinite;
+}
+
+.checkout-button:hover {
+    background-color: #c12020;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.foot-section .foot-result .garantia-box {
+    display: flex;
+    align-items: center;
+}
+
+.foot-section .foot-result .garantia-box p {
+    background-color: #ba0d0d;
+    color: #fff;
+    border: #000 solid;
+    box-shadow: 0 15px 15px #000;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 30px;
+    margin-left: 40px;
+    width: 200px;
+}
+
+.foot-section .foot-result .selos {
+    display: flex;
+    justify-content: center;
+    border-top: #ba0d0d dashed;
+    margin: 10px 20px 15px 20px;
+    width: 500px;
+}
+
+.garantia {
+    width: 200px;
+}
+
+.barra-segura {
+    width: 300px;
+    margin-right: 15px;
+}
+
+
+.site-seguro {
+    width: 130px;
+    margin-left: 15px;
+    margin-top: 8px;
+}
+
+
+
 /*------------------------------------------------------------------------*/
 
 .quiz {
@@ -222,10 +396,35 @@
     margin: 0 auto;
 }
 
+.ocultar {
+    display: none;
+}
+
 .quiz.ocultar {
     display: none;
 }
 
 .quiz.mostrar {
     display: flex;
+}
+
+.progress-container {
+    position: absolute;
+    bottom: 60px;
+    width: 600px;
+    height: 12px;
+    border-radius: 5px;
+    background-color: #ccc;
+}
+
+.progress-bar {
+    height: 100%;
+    background-color: #27710e;
+    border-radius: 5px;
+    transition: width 2s ease;
+}
+
+@keyframes fill {
+    from { width: 0; }
+    to { width: 100%; }
 }
