--- a/SRC/CSS/responsive.css
+++ b/SRC/CSS/responsive.css
@@ -6,6 +6,7 @@
 
     .introduction {
         width: 100%;
+        height: 100%;
     }
 
     .introduction .banner, 
@@ -123,6 +124,10 @@
         font-size: 17px;
         margin: 10px 30px 90px 30px;
         padding: 25px;
+    }
+
+    .result:after {
+        display: none;
     }
 
     .foot-section {
