--- a/SRC/CSS/style.css
+++ b/SRC/CSS/style.css
@@ -6,7 +6,6 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100%;
 }
 
 .introduction {
@@ -15,11 +14,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
+    height: 100vh;
 }
 
 .introduction .banner {
-    width: 450px;
+    width: 400px;
     border: #fff solid 4px;
     margin-top: 10px;
 }
@@ -45,7 +45,12 @@
     height: 73px;
 }
 
-.introduction .footer-copy {
+
+.foot-section-intro {
+    width: 100%;
+}
+
+.foot-section-intro .footer-copy {
     display: flex;
     color: #fff;
     background-color: #181412;
@@ -54,7 +59,7 @@
     margin-top: 28px;
     border-top: thick double #fff;
     width: 100%;
-    height: 50px;
+    height: 100%;
 }
 
 .introduction .footer-copy p {
@@ -201,7 +206,7 @@
     animation: downarrow 0.6s infinite alternate ease-in-out;
 }
 
-@-webkit-keyframes downarrow {
+@keyframes downarrow {
     0% {
         -webkit-transform: translateY(0);
         opacity: 0.4;
