--- a/SRC/CSS/responsive.css
+++ b/SRC/CSS/responsive.css
@@ -7,7 +7,7 @@
 
     .introduction {
         width: 100%;
-        height: 100%;
+        height: 100vh;
         justify-content: center;
     }
 
